--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: rgba(18, 109, 255);
+    --heading-font-family: "Bodoni Moda", serif;
+    --p-font-family: "Raleway", sans-serif;
+}
+
 h1{
     color: rgb(125, 173, 255);
 }
