--- a/style.css
+++ b/style.css
@@ -7,7 +7,80 @@
     --p-font-family: "Raleway", sans-serif;
 }
 
-h1{
-    color: rgb(125, 173, 255);
+body{
+    font-family: var(--p-font-family);
+    background:#fef1e6 ;
+}
+.container{
+    max-width: 1400px;
+    margin: 0 auto;
+}
+header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/tatry-4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    font-family: var(--title-font-family);
+    padding: 180px 0;
+}
+ header h1{
     font-family: var(--heading-font-family);
+    font-size: 94px;
+    font-weight:700 ;
+    line-height: 1;
+    margin: 30px 0;
+}
+
+header h2{
+    font-style: italic;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0;
+    color: rgb(226, 237, 255);
+}
+
+header h3 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.5;
+    letter-spacing: 4px;
+    margin: 0;
+    color: rgb(226, 237, 255);
+}
+
+header a {
+    font-weight: 900;
+    font-size: 14px;
+    line-height: 1.5;
+
+    text-align: center;
+    color: var(--primary-color);
+    letter-spacing: 3px;
+    text-decoration: none;
+    text-transform: uppercase;
+    background:rgb(215, 231, 255);
+    padding: 12px 24px;
+    display: inline-block;
+    margin-top: 60px;
+    border-radius: 5px;
+}
+
+@media (max-width: 900px){
+    header {
+        padding: 60px 0;
+    }
+
+   header h1 {
+        font-size: 44px;
+    }
+
+   header h2 {
+        font-size: 20px;
+    }
+
+   header h3{
+        font-size: 12px;
+    }
 }
