Created the Footer of the page
Footer content added and styled with CSS.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,17 @@ body{
     max-width: 1400px;
     margin: 0 auto;
 }
+
+.grid {
+    display: grid;
+    grid-template-columns:1fr 2fr 2fr ;
+}
+
+section {
+    max-width: 1200px;
+    margin: 0;
+}
+
 header{
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/tatry-4.jpg");
     background-repeat: no-repeat;
@@ -67,7 +78,49 @@ header a {
     border-radius: 5px;
 }
 
-@media (max-width: 900px){
+
+
+
+
+footer{
+    color:#fef1e6;
+    background-image: linear-gradient(rgba(0, 90, 102, 0.9), rgba(0, 90, 102, 0.9)), url("../img/tatry-2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px 0;
+}
+
+footer h3 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 30px;
+}
+
+footer p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    margin-right: 20px;
+    opacity: 0.9;
+}
+
+footer ul{
+    margin: 0;
+}
+
+footer li{
+    list-style-type: none ;
+    margin: 0;
+    padding: 0;
+}
+
+footer a {
+    color: #fef1e6;
+    opacity: 0.7;
+}
+
+@media (max-width: 960px){
     header {
         padding: 60px 0;
     }
