--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 :root {
     --primary-color: rgba(18, 109, 255);
-    --heading-font-family:"Yeseva One",
-        serif;
-    --title-font-family: "Playfair Display",
+    --heading-font-family: "Playfair Display",
         serif;
     --p-font-family: "Raleway", sans-serif;
 }
@@ -18,12 +16,20 @@ body{
 
 .grid {
     display: grid;
-    grid-template-columns:1fr 2fr 2fr ;
+    grid-gap: 64px;
+}
+
+.grid-2-columns{
+    grid-template-columns: 1fr 1fr;
+}
+.grid-3-columns-narrow{
+    grid-template-columns: 1fr 2fr 2fr;
 }
 
 section {
     max-width: 1200px;
     margin: 0;
+    padding: 100px 10px;
 }
 
 header{
@@ -32,15 +38,15 @@ header{
     background-size: cover;
     color: white;
     text-align: center;
-    font-family: var(--title-font-family);
+    font-family: var(--heading-font-family);
     padding: 180px 0;
 }
  header h1{
-    font-family: var(--heading-font-family);
+    font-family:var(--heading-font-family);
     font-size: 94px;
     font-weight:700 ;
     line-height: 1;
-    margin: 30px 0;
+    margin: 30px 5px;
 }
 
 header h2{
@@ -48,21 +54,22 @@ header h2{
     font-size: 40px;
     font-weight: 400;
     line-height: 1.5;
-    margin: 0;
-    color: rgb(226, 237, 255);
-}
-
-header h3 {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.5;
     letter-spacing: 4px;
     margin: 0;
     color: rgb(226, 237, 255);
 }
 
+header h3 {
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 1.5;
+    letter-spacing: 5px;
+    margin: 0;
+    color: rgb(226, 237, 255);
+}
+
 header a {
-    font-weight: 900;
+    font-weight: 800;
     font-size: 14px;
     line-height: 1.5;
 
@@ -71,15 +78,51 @@ header a {
     letter-spacing: 3px;
     text-decoration: none;
     text-transform: uppercase;
-    background:rgb(215, 231, 255);
+    background:rgb(215, 231, 255, 0.9);
     padding: 12px 24px;
     display: inline-block;
     margin-top: 60px;
     border-radius: 5px;
 }
 
+.tatry-photo {
+    max-width: 100%;
+    border-radius:100px 100px 1px 100px;
+    box-shadow: -11px 6px 32px 5px rgba(152, 143, 127, 0.587);
+    margin: 0 auto;
+}
 
+main {
+    background-color: white;
+    
+}
 
+main h2{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 5px;
+    color: var(--primary-color);
+    opacity: 0.2;
+    text-transform: uppercase;
+    margin: 0;
+    
+}
+
+main h3{
+    font-weight: 800;
+    font-size: 40px;
+    margin: 0 0 50px 0;
+    line-height:1.5;
+    color: var(--primary-color);
+    font-family: var(--heading-font-family);
+}
+
+main p{
+    font-size: 16px;
+    line-height: 1.5;
+    opacity: 0.7;
+}
 
 
 footer{
@@ -87,26 +130,26 @@ footer{
     background-image: linear-gradient(rgba(0, 90, 102, 0.9), rgba(0, 90, 102, 0.9)), url("../img/tatry-2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 50px 0;
+    padding:0 20px;
 }
 
 footer h3 {
     font-weight: 700;
     font-size: 20px;
     line-height: 30px;
-    margin: 30px;
+  
 }
 
 footer p{
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    margin-right: 20px;
     opacity: 0.9;
 }
 
 footer ul{
     margin: 0;
+    padding: 0;
 }
 
 footer li{
@@ -135,5 +178,19 @@ footer a {
 
    header h3{
         font-size: 12px;
+    }
+
+    .grid {
+        grid-template-columns: 1fr;
+        grid-gap: 32px;
+    }
+
+    section {
+        padding: 30px;
+    }
+
+    .tatry-photo {
+        transform: scale(0.9);
+        
     }
 }
