--- a/style.css
+++ b/style.css
@@ -37,14 +37,20 @@ body{
     grid-template-columns: 1fr 2fr 2fr;
 }
 
-
+.embed {
+    width: 100%;
+}
 
 .card {
     background: white;
     border: 5px solid white;
     border-radius: 10px;
+    box-shadow: -11px 10px 32px 5px #988f7f96;
 }
 
+.card-heading {
+    grid-gap: 1px;
+}
 .card-body {
   padding: 35px;  
 }
@@ -76,11 +82,9 @@ body{
 
 }
 .img-responsive {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
     display: block;
-    margin: 0 auto;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 
@@ -263,11 +267,18 @@ footer a {
         font-size: 12px;
     }
 
+    .card-heading img {
+        display: none;
+    }
+
+
     .grid {
         grid-template-columns: 1fr;
         grid-gap: 32px;
     }
-
+.embed {
+    aspect-ratio: 16/9;
+}
     .grid-3-columns {
         grid-template-columns: 1fr;
     }
@@ -288,4 +299,5 @@ footer a {
    footer, footer p, a, ul {
         font-size: 12px;
     }
+
 }
