--- a/style.css
+++ b/style.css
@@ -93,7 +93,10 @@ section.gallery {
     display: block;
     border-radius: 5px;
 }
+ img {
+    filter: brightness(105%) contrast(95%);
 
+ }
 
 
 header{
@@ -155,6 +158,7 @@ header a {
     border-radius:150px 150px 10px 150px;
     box-shadow: -11px 15px 32px 5px #988f7f96;
     margin: 0 auto;
+    filter: brightness(110%);
 }
 
 main {
@@ -216,7 +220,24 @@ section.secondary {
 background-color: #fef1e6;
 
 }
+td {
+    font-style: italic;
+    font-size: 13px;
+}
+th,tr:nth-child(even) {
+        background-color: #fbabab;
+    }
+    
+table {
+    text-align: left;
+    opacity: 0.7;
+    color: #045e87;
+    width: 100%;
+}
 
+table.container{
+    overflow-x: auto;
+}
 
 footer{
     color:#fef1e6;
